# ex-current-sensor-stack

./: .gitignore  README.md
dashboard/: .env  .env.example  .gitignore  index.html  package-lock.json  package.json
dashboard/src/: App.jsx  main.jsx  relayx.js  styles.css
dashboard/src/components/: AdCard.jsx  Charts.jsx  DeviceCard.jsx  EventsAlerts.jsx  SampleRateDialog.jsx  SampleRateForm.jsx  SessionButton.jsx  Toast.jsx  TopBar.jsx
dashboard/src/hooks/: useDeviceConfig.js  useOnline.js  useSimState.js
dashboard/src/lib/: format.js  icons.jsx
device/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
device/main/: CMakeLists.txt  actuator.cpp  actuator.h  app_shared.cpp  app_shared.h  device_task.cpp  device_task.h  idf_component.yml  ina219.cpp  ina219.h  main.cpp  sensor_task.cpp  sensor_task.h  status_led.cpp  status_led.h  wifi.cpp  wifi.h
